@@ -2885,19 +2885,36 @@ proc get_valueof { fmt exp default } {
     set test "get valueof \"${exp}\""
     set val ${default}
     gdb_test_multiple "print${fmt} ${exp}" "$test" {
-	-re "\\$\[0-9\]* = (\[-\]*\[0-9\]*).*$gdb_prompt $" {
+	-re "\\$\[0-9\]* = (.*)\[\r\n\]*$gdb_prompt $" {
 	    set val $expect_out(1,string)
 	    pass "$test ($val)"
 	}
 	timeout {
-	    set size ${default}
-	    fail "get value of ${exp} (timeout)"
+	    fail "$test (timeout)"
 	}
     }
     return ${val}
 }
 
+proc get_integer_valueof { exp default } {
+    global gdb_prompt
+
+    set test "get integer valueof \"${exp}\""
+    set val ${default}
+    gdb_test_multiple "print /d ${exp}" "$test" {
+	-re "\\$\[0-9\]* = (\[-\]*\[0-9\]*).*$gdb_prompt $" {
+	    set val $expect_out(1,string)
+	    pass "$test ($val)"
+	}
+	timeout {
+	    fail "$test (timeout)"
+	}
+    }
+    return ${val}
+}
+
+
 proc get_sizeof { type default } {
-    return [get_valueof "/d" "sizeof (${type})" $default]
+    return [get_integer_valueof "sizeof (${type})" $default]
 }
 
